engine/k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: salesnav-scraper
  namespace: salesnav-scraper
  annotations:
    networking.gke.io/managed-certificates: "salesnav-cert"
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "salesnav-ip"
spec:
  rules:
    - host: scraper.ortusclub.com
      http:
        paths:
          - path: /fg-roster
            pathType: Prefix
            backend:
              service:
                name: fg-roster
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: salesnav-scraper
                port:
                  number: 80
